# golemdb-workshop

./: .gitignore  README.md
excercise/: run-with-python.sh  run-with-ts.sh
excercise/backend-python/: README.md  main.py  pyproject.toml
excercise/backend-ts/: README.md  bun.lockb  package.json
excercise/backend-ts/src/: index.ts
excercise/frontend/: README.md  bun.lockb  index.html  package.json  vite.config.ts
excercise/frontend/src/: App.css  App.tsx  query.ts
samples/python/: hello_world.py  pyproject.toml  requirements.txt
samples/ts/: README.md  bun.lockb  index.ts  package-lock.json  package.json
